--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.0.1",
     "node-cron": "^3.0.1",
     "node-fetch": "^3.2.6",
+    "node-file-logger": "^0.9.5",
     "twitter-api-v2": "^1.12.2",
     "uuid": "^8.3.2"
   }
