--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "dependencies": {
     "date-fns-tz": "^1.3.5",
     "dotenv": "^16.0.1",
+    "node-cron": "^3.0.2",
     "node-fetch": "^3.2.6",
     "node-file-logger": "^0.9.5",
     "twitter-api-v2": "^1.12.2",
     "uuid": "^8.3.2"
+  },
+  "scripts": {
+    "start" : "node app.js"
   }
 }
